Updated the screens for friends, chats / Created find and more screens

--- a/chats.html
+++ b/chats.html
@@ -29,7 +29,10 @@
         <span><i class="fas fa-search fa-fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+          <div class="screen-header__red-dot-notification"></div
       </div>
     </header>
 
@@ -42,10 +45,87 @@
           />
           <div class="user-component__text">
             <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">Please check My Coconut Account Info</h6>
+            <h6 class="user-component__subtitle">
+              Please check My Coconut Account Info
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <span class="user-component__time">15:32</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component-title">CoconutTalk</h4>
+            <h6 class="user-component__subtitle">
+              Please check My Coconut Account Info
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">15:32</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component-title">CoconutTalk</h4>
+            <h6 class="user-component__subtitle">
+              Please check My Coconut Account Info
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">15:32</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component-title">CoconutTalk</h4>
+            <h6 class="user-component__subtitle">
+              Please check My Coconut Account Info
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">15:32</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component-title">CoconutTalk</h4>
+            <h6 class="user-component__subtitle">
+              Please check My Coconut Account Info
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">15:32</span>
+          <div class="badge">1</div>
+        </div>
       </div>
     </main>
 
@@ -53,21 +133,23 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html"
-            ><span class="nav__comment-notification">1</span
-            ><i class="fas fa-comment fa-2x"></i></i
+            ><span class="nav__comment-notification badge">1</span
+            ><i class="fas fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html"
-            ><div class="nav__ellipsis-notification"></div>
+            ><div class="nav__red-dot-notification"></div>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
