--- a/chats.html
+++ b/chats.html
@@ -32,101 +32,50 @@
         <span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
-          <div class="screen-header__red-dot-notification"></div
+        <div class="screen-header__red-dot-notification"></div>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Coconut Account Info
-            </h6>
+      <a href="chat1.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
+              class="user-component__avatar user-component__avatar--xl"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component-title">CoconutTalk</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Coconut Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">15:32</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Coconut Account Info
-            </h6>
+      </a>
+      <a href="chat2.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/JohnvonNeumann-LosAlamos.gif/200px-JohnvonNeumann-LosAlamos.gif"
+              class="user-component__avatar user-component__avatar--xl"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component-title">John von Neumann</h4>
+              <h6 class="user-component__subtitle">
+                Good day to code. Thanks.
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">08:44</span>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Coconut Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Coconut Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/Ob9Ys8yKMeyKzZvl3cB9JNSTui1lJwjSKD60IVYnlvU2DsahysGENJE-txiRIW9_72Vd"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">CoconutTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Coconut Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
@@ -155,6 +104,14 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <div id="not-portrait">
+      <span>Please rotate the screen to portrait orientation.</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
