--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More - Coconut Talk!</title>
+    <title>Settings - Coconut Talk!</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,77 +23,54 @@
       </div>
     </div>
 
-    <header class="screen-header">
-      <h1 class="screen-header__title">More</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i> </span>
-        <div class="screen-header__red-dot-notification"></div>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="#" onclick="history.back(-1); return false;"
+          ><i class="fas fa-chevron-left fa-2x"></i
+        ></a>
+      </div>
+      <div class="alt-header__column">
+        <span class="alt-header__title">Settings</span>
+      </div>
+      <div class="alt-header__column">
+        <span class="alt-header__icon"
+          ><i class="fas fa-search fa-2x"></i
+        ></span>
+        <!--<span class="alt-header__icon"><i class="fas fa-bars fa-2x"></i></span>-->
       </div>
     </header>
 
-    <main class="main-screen more-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/16194925_1556702111011172_6667184870472930016_n.jpg?_nc_cat=104&_nc_sid=174925&_nc_ohc=-DPY9IV51ccAX-dqHm7&_nc_ht=scontent-ssn1-1.xx&oh=4ecc934382465f8ecf40c6e44ac3d5a6&oe=5F5D4DF1"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component-title">Ken</h4>
-            <h6 class="user-component__subtitle">
-              <span>+82-10-1234-5678</span
-              ><span><i class="fas fa-exclamation-circle"></i></span>
-            </h6>
+    <main class="main-screen">
+      <ul class="setting-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+            <span>Notices</span>
           </div>
-        </div>
-        <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
-        </div>
-      </div>
-      <div class="icon-row">
-        <div class="icon-row__icon">
-          <i class="far fa-calendar-alt"></i>
-          <span>Calendar</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-inbox"></i>
-          <span>Talk Drive</span>
-          <span id="icon-row__contacts-text"></span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="far fa-grin-squint"></i>
-          <span>Emoticons</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-brush"></i>
-          <span>Themes</span>
-        </div>
-      </div>
-      <div class="icon-row">
-        <div class="icon-row__icon">
-          <i class="fas fa-money-check"></i>
-          <span>Account</span>
-        </div>
-      </div>
-      <div class="more-suggestions">
-        <h4 class="more-suggestions__title">Suggestions</h4>
-        <div class="more-suggestions__icons">
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-flask"></i><span>Coconut Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
+        </li>
+        <a href="index.html">
+          <li class="settings__setting">
+            <div class="settings__setting-column">
+              <i class="fas fa-sign-out-alt"></i><span>Logout</span>
             </div>
-            <span class="more-suggestions__icon-text">Coconut Story</span>
-          </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Coconut Story</span>
-          </div>
-        </div>
-      </div>
+            <div class="settings__setting-column"></div>
+          </li>
+        </a>
+      </ul>
     </main>
 
     <nav class="nav">
@@ -122,6 +99,14 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <div id="not-portrait">
+      <span>Please rotate the screen to portrait orientation.</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
