--- a/friends.html
+++ b/friends.html
@@ -31,14 +31,18 @@
         <span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
-          <div class="screen-header__red-dot-notification"></div
+        <div class="screen-header__red-dot-notification"></div>
       </div>
     </header>
 
     <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i>Friends' Names Display<i
-        class="fas fa-chevron-right fa-xs"
-      ></i>
+      <div class="friends-display-link__column">
+        <i class="fas fa-info-circle"></i>
+      </div>
+      <div class="friends-display-link__column">Friends' Names Display</div>
+      <div class="friends-display-link__column">
+        <i class="fas fa-chevron-right fa-xs"></i>
+      </div>
     </a>
 
     <main class="friends-screen">
@@ -106,6 +110,14 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <div id="not-portrait">
+      <span>Please rotate the screen to portrait orientation.</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
