--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Coconut Talk!</h1>
-      <p class="welcome-header__text">
-        If you have a Coconut Account, log in with your email or phone number.
-      </p>
+      <div class="welcome-header__text">If you have a Coconut Account,</div>
+      <div class="welcome-header__text">
+        log in with your email or phone number.
+      </div>
     </header>
 
     <!-- 현재 서버가 없어서 form에 get 방식을 적용하는 것임. get을 적용할 경우 
@@ -41,10 +42,22 @@
         placeholder="Email or phone number"
       />
       <input required name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
+      <input type="submit" value="Log In" id="login-btn" />
       <a href="#">Find Coconut Account or password</a>
       <a href="#">Sign Up</a>
     </form>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <div id="not-portrait">
+      <span>Please rotate the screen to portrait orientation.</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
