--- a/more.html
+++ b/more.html
@@ -125,6 +125,14 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <div id="not-portrait">
+      <span>Please rotate the screen to portrait orientation.</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
