--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
+        <span>KT</span>
         <i class="fas fa-signal"></i>
-        <span>KenTelecom</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
@@ -25,9 +25,7 @@
 
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Coconut Talk!</h1>
-      <div class="welcome-header__text">If you have a Coconut Account,</div>
-      <div class="welcome-header__text">
-        log in with your email or phone number.
+      <p class="welcome-header__text">If you have a Coconut Account, log in with your email or phone number.</p>
       </div>
     </header>
 
