--- a/chat1.html
+++ b/chat1.html
@@ -10,7 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
-        <span>KenTelecom</span>
+        <span>KT</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
@@ -25,16 +25,16 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="chats.html"><i class="fas fa-chevron-left fa-2x"></i></a>
+        <a href="chats.html"><i class="fas fa-chevron-left fa-lg"></i></a>
       </div>
       <div class="alt-header__column">
         <span class="alt-header__title">CoconutTalk</span>
       </div>
       <div class="alt-header__column">
         <span class="alt-header__icon"
-          ><i class="fas fa-search fa-2x"></i
+          ><i class="fas fa-search fa-lg"></i
         ></span>
-        <span class="alt-header__icon"><i class="fas fa-bars fa-2x"></i></span>
+        <span class="alt-header__icon"><i class="fas fa-bars fa-lg"></i></span>
       </div>
     </header>
 
