--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
-        <span>KenTelecom</span>
+        <span>KT</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
