--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
-        <span>KenTelecom</span>
+        <span>KT</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
@@ -26,7 +26,7 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="#" onclick="history.back(-1); return false;"
-          ><i class="fas fa-chevron-left fa-2x"></i
+          ><i class="fas fa-chevron-left fa-lg"></i
         ></a>
       </div>
       <div class="alt-header__column">
@@ -34,7 +34,7 @@
       </div>
       <div class="alt-header__column">
         <span class="alt-header__icon"
-          ><i class="fas fa-search fa-2x"></i
+          ><i class="fas fa-search fa-lg"></i
         ></span>
         <!--<span class="alt-header__icon"><i class="fas fa-bars fa-2x"></i></span>-->
       </div>
