--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen chats-screen">
       <a href="chat1.html">
         <div class="user-component">
           <div class="user-component__column">
