--- a/find.html
+++ b/find.html
@@ -35,21 +35,23 @@
     </header>
 
     <main class="main-screen find-screen">
-      <div class="icon-row">
-        <div class="icon-row__icon">
+      <div class="icon-container">
+        <div class="icon-container__icon">
           <i class="fas fa-qrcode"></i>
           <span>QR Code</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-container__icon">
           <i class="far fa-address-book"></i>
           <span>Add by</span>
-          <span id="icon-row__contacts-text--less-top-margin">Contacts</span>
+          <span id="icon-container__contacts-text--less-top-margin"
+            >Contacts</span
+          >
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-container__icon">
           <i class="fas fa-fingerprint"></i>
           <span>Add by ID</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-container__icon">
           <i class="far fa-envelope"></i>
           <span>Invite</span>
         </div>
