Icon-container updated
container width
repeat(4, 25%) --> repeat(4, 1fr)

--- a/chat2.html
+++ b/chat2.html
@@ -50,7 +50,7 @@
           <div class="message__author">John von Neumann</div>
           <div class="message__info">
             <span class="message__bubble">
-              Hey, Ken! How are you today?
+              Hey, Ryan! How are you today?
             </span>
             <span class="message__time">08:35</span>
           </div>
