--- a/friends.html
+++ b/friends.html
@@ -53,7 +53,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component-title">Ken</h4>
+            <h4 class="user-component-title">Ryan</h4>
             <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
           </div>
         </div>
