--- a/more.html
+++ b/more.html
@@ -43,7 +43,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component-title">Ken</h4>
+            <h4 class="user-component-title">Ryan</h4>
             <h6 class="user-component__subtitle">
               <span>+82-10-1234-5678</span
               ><span><i class="fas fa-exclamation-circle"></i></span>
